# ai-engineering-project

./: README.md  main.py  pyproject.toml  requirements.txt  vercel.json
docs/: arquitetura.drawio
frontend/: README.md  index.html  script.js  styles.css
src/: main.py
src/api/: endpoints.py  models.py
src/data/: embrapa_scraper.py
