[project]
name = "ai-engineering-project"
version = "0.1.0"
description = ""
authors = [
    {name = "vrZambrano",email = "victorzambrano13@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,4.0"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]
